# MetaGym

./: .gitignore  .gitmodules  README.md  requirements.txt  setup.py
baseline/: wrapper.py  wrapper_utils.py
baseline/liftsim_baseline/: README.md  demo.py  wrapper.py  wrapper_utils.py
liftsim/: README.md  config.ini  demo.py
liftsim/environment/: __init__.py  env.py  wrapper_utils.py
liftsim/tests/: __init__.py  qa_test.py  stable_test.py  test_env.py
metagym/: __init__.py
metagym/bandits/: README.md  __init__.py  bandits_env.py  demo_thompson_sampling.py
metagym/liftsim/: README.md  README_zh.md  __init__.py  config.ini
metagym/metalm/: README.md  __init__.py  data_generator.py  metalm.py
metagym/metalocomotion/: README.md  __init__.py  demo.py  test.py
metagym/metamaze/: README.md  __init__.py  keyboard_play_demo_2d.py  keyboard_play_demo_3d.py  keyboard_play_demo_continous_3d.py  keyboard_play_demo_discrete_3d.py  test.py
metagym/navigator2d/: README.md  __init__.py  keyboard_control_demo.py  navigator.py  test.py  wheeled_robot.py
metagym/quadrotor/: .gitignore  README.md  README_zh.md  __init__.py  env.py  generate_default_map.py  quadrotorsim.py  render.py
metagym/quadrupedal/: ESStair_origin.npz  README.md  __init__.py  test.py  test_ETG.py
rlschool/: __init__.py
rlschool/A1_robot/: README.md  __init__.py  test.py
rlschool/liftsim/: README.md  README_zh.md  __init__.py  config.ini
rlschool/metamaze/: README.md  __init__.py  keyboard_play_demo.py  keyboard_play_demo_2d.py  keyboard_play_demo_3d.py  test.py
rlschool/navigator2d/: README.md  __init__.py  keyboard_control_demo.py  navigator.py  test.py  wheeled_robot.py
rlschool/quadrotor/: README.md  README_zh.md  __init__.py  config.json  default_map.txt  env.py  generate_default_map.py  quadrotorsim.py  render.py  utils.py
rlschool/quadrotor/quadrotorsim/: CMakeLists.txt  config.xml  test.py
rlschool/quadrotor/quadrotorsim/include/: common_tools.h  simulator.h
rlschool/quadrotor/quadrotorsim/src/: simulator.cpp
rlschool/quadrotor/uranusim/: CMakeLists.txt  README  test.py
rlschool/quadrotor/uranusim/include/: common_tools.h  uranus_simulator.h
rlschool/quadrotor/uranusim/src/: pyapi.cpp  uranus_simulator.cpp
rlschool/quadrupedal/: README.md  __init__.py  test.py  test_ETG.py
rlschool/random_maze/: maze.py  (+1 more)
test/: test_generator_proxy.cpp  test_test_elevator.cpp
(+1075 files in other folders)
